# excel_to_csv

./: .gitignore  .mcp.json  COVERAGE_REPORT.md  README.md  TASKS.md  VERIFICATION_REPORT.md  create_additional_test_files.py  create_test_excel.py  demo_coverage_analysis.py  excel_to_csv.sh  excel_to_csv_converter.py  fix_tests.py  generate_coverage_report.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_coverage_demo.py  test_comprehensive_conversion.py  test_entry_point.py  test_main_workflow.py
.claude/: settings.local.json
.claude/specs/test-coverage-90/: design.md  requirements.md  tasks.md
.spec-workflow/: session.json
.spec-workflow/approvals/excel-to-csv-converter/: approval_1757186522805_keom703kq.json  approval_1757247208268_uuc0599ca.json
.spec-workflow/approvals/file-archiving/: approval_1757274749190_k0z6mfivb.json
.spec-workflow/specs/coverage-improvement-90/: design.md  requirements.md  tasks.md
.spec-workflow/specs/detailed-logging-enhancement/: design.md  requirements.md  tasks.md
.spec-workflow/specs/excel-to-csv-converter/: design.md  requirements.md  tasks.md
.spec-workflow/specs/file-archiving/: design.md  requirements.md  tasks.md
.spec-workflow/steering/: product.md  structure.md  tech.md
config/: claude_code_system_prompt.yaml  default.yaml
coverage_output/: coverage_summary.md
docs/: DESIGN.md  README.md  why_consistency_analyze.md
examples/: README.md  development_config.yaml  docker_service_example.py  production_config.yaml  sample_config.yaml  sample_processing_report.md  sample_usage.py
input/archive/: Mixed_test.xlsx
output/: Mixed_test_01_20250911_201031_report.md  Mixed_test_20250911_201031_report.md  formulas_input_20250911_201031_report.md  test_mtime_TableLike20Rows.csv
scripts/: generate_test_excels.py
src/excel_to_csv/: __init__.py  cli.py  excel_to_csv_converter.py  main.py
src/excel_to_csv/analysis/: __init__.py  confidence_analyzer.py
src/excel_to_csv/archiving/: __init__.py  archive_manager.py
src/excel_to_csv/config/: __init__.py  config_manager.py
src/excel_to_csv/generators/: __init__.py  csv_generator.py
src/excel_to_csv/models/: __init__.py  data_models.py
src/excel_to_csv/monitoring/: __init__.py  file_monitor.py
src/excel_to_csv/processors/: __init__.py  excel_processor.py
src/excel_to_csv/reporting/: __init__.py  pdf_report_generator.py  report_generator.py
src/excel_to_csv/utils/: __init__.py  correlation.py  logger.py  logging_config.py  logging_decorators.py  metrics.py  system_prompt_loader.py
tests/: __init__.py  conftest.py  test_archive_manager.py  test_cli.py  test_cli_comprehensive.py  test_converter_integration.py  test_coverage_config.py  test_excel_to_csv_converter.py  test_main.py  test_main_converter_comprehensive.py  test_main_entry_point.py  test_partial_worksheet_conversion.py
tests/analysis/: test_confidence_analyzer.py  test_confidence_analyzer_comprehensive.py
tests/archiving/: __init__.py  test_archive_manager.py  test_archive_manager_comprehensive.py
tests/config/: test_config_manager.py  test_config_manager_comprehensive.py
tests/generators/: test_csv_generator.py  test_csv_generator_comprehensive_90plus.py  test_csv_generator_improved.py
tests/integration/: test_archiving_integration.py  test_comprehensive_integration.py  test_end_to_end.py
tests/models/: test_data_models_comprehensive.py
tests/monitoring/: test_file_monitor.py  test_file_monitor_comprehensive.py
tests/performance/: __init__.py  test_archiving_performance.py  test_performance.py
tests/processors/: test_excel_processor.py  test_excel_processor_comprehensive.py
tests/reporting/: __init__.py  test_pdf_report_generator_comprehensive.py  test_report_generator_comprehensive.py
tests/unit/: test_config_manager.py  test_excel_processor.py
tests/utils/: test_correlation.py  test_logger_comprehensive.py  test_logging_config.py  test_logging_decorators.py  test_logging_decorators_comprehensive.py  test_metrics.py  test_metrics_comprehensive.py  test_system_prompt_loader_comprehensive.py
